<resources>

    <string name="app_name">Smartfridge</string>
    <string name="title_activity_login">Sign in</string>
    <string name="loginText">Please enter your UserId and the URL of the Smartfridge API.</string>
    <string name="loginAPIURL">http://pws.svshizzle.com/api/</string>
    <string name="loginUserIdHint">Your UserId</string>
    <string name="loginUserIdEmpty">You forgot to enter a UserId.</string>
    <string name="loginAPIURLEmpty">You forgot to enter a API URL.</string>
<string name="loginDialogUserIdCheck">Checking your UserId.</string>
    <string name="loginAPIURLFaulty">The API URL you provided is not correct.</string>
    <string name="loginDialogTitle">Signing in...</string>
    <string name="loginDialogTextAPIURLCheck">Checking the API URL you provided.</string>

    <string name="loginUserIdFaulty">TheUserId you entered is not correct.</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_jobs">Jobs</string>
    <string name="nav_item_log">Log</string>
    <string name="nav_item_settings">Settings</string>
    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_jobs</item>
        <item>@string/nav_item_log</item>
        <item>@string/title_list</item>

    </string-array>

    <string name="title_home">Home</string>
    <string name="title_jobs">Jobs</string>
    <string name="title_log">Log</string>
    <string name="title_list">Shopping List</string>
    <string name="title_settings">Settings</string>

    <string name="noInternetMessage">Oops, you currently don\'t have a network connection. Try again when you do.</string>


    <!--
    All the api server files etc-->
    <string name="APIServerCheck">serverCheck</string>
    <string name="APIUserIdCheck">userIdCheck</string>


    <string name="SharedPreferencesUserId">userid</string>
    <string name="SharedPreferencesSignedIn">signedin</string>
    <string name="SharedPreferencesAPIURL">apiurl</string>
    <string name="SharedPreferencesName">preferences</string>
    <string name="SharedPreferencesContainsBackup">containsbackup</string>
    <string name="SharedPreferencesLogBackupASC">logbackupASC</string>
    <string name="SharedPreferencesLogBackupDESC">logbackupDESC</string>
    <string name="SharedPreferencesActiveBackup">activebackup</string>


    <!--
    Texts for the buttons @job
    -->
    <string name="jobs_shutdown_button">Shutdown</string>
    <string name="jobs_shutdown_text">Send a message to the fridge to shutdown:</string>
    <string name="jobs_shutdown_text_done">Shutdown message sent!</string>
    <string name="jobs_restart_button">Restart</string>
    <string name="jobs_restart_text">Restart the fridge computer:</string>
    <string name="jobs_restart_text_done">The fridge will restart soon!</string>
    <string name="jobs_print_text">Print a text:</string>
    <string name="jobs_print_button">Print</string>
    <string name="jobs_print_text_done">Text printed!</string>
    <string name="jobs_barcode_text">Print a barcode for an item,\n fill in the title here:</string>
    <string name="jobs_barcode_button">Print barcode</string>
    <string name="jobs_barcode_hint">Box of cookies</string>
    <string name="jobs_barcode_text_done">Barcode is being printed</string>
    <string name="jobs_barcode_text_create_done">Item added to database</string>

    <string name="log_item_markJob">The job with id %1$s was done.</string>
    <string name="log_item_markJob_barcode">A barcode(%1$s) was printed. #%2$s</string>
    <string name="log_item_markJob_text">A text(%1$s) came out of the printer. #%2$s</string>
    <string name="log_item_markJob_reboot">The fridge rebooted. #%1$s</string>
    <string name="log_item_markJob_shutdown">The fridge went down. #%1$s</string>


    <string name="log_item_createJob_shutdown">A shutdown command was sent.</string>
    <string name="log_item_createJob_reboot">A reboot command was sent.</string>
    <string name="log_item_createJob_barcode">A barcode(%1$s) job was added.</string>
    <string name="log_item_createJob_text">A text(%1$s) was printed.</string>
    <string name="log_item_createJob_list">A list of items was added to the fridges jobs.</string>
    <string name="log_item_createJob">A job was added.</string>

    <string name="log_item_itemChange_del">You removed an item(%1$s) from the fridge.</string>
    <string name="log_item_itemChange_open">An open item(%1$s) was added to the fridge.</string>
    <string name="log_item_itemChange_add">An closed item(%1$s) was added to the fridge.</string>
    <string name="log_item_itemChange">An item(%1$s) was changed.</string>

    <!--Text for the button of the shopping list

    -->
<string name="ShoppingListButtonText">Print the shoppinglist!</string>
    <string name="homeSwitchText">Only current items / All</string>
    <string name="textview"> </string>
    <string name="HomeRefreshingFail">Oops, refreshing failed. Errormessage:</string>
    <string name="dialogNameText">Name</string>

</resources>